--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@
 version: '3.7'
 services:
   frontend:
+    env_file: 
+    - .env
     build:
       context: .
       args: 
-        uid: ${UID}
-      target: 'develop-stage'
+        uid: ${UID}    
+      target: 'develop-stage'      
     ports:
     - '8080:8080'
     volumes:
     - '.:/app'
-    command: /bin/sh -c "yarn serve"
+    command: /bin/sh -c "yarn install && yarn serve"
